<resources>
    <string name="app_name">HardDisk ShowRoom</string>
    <string name="cars_in_stock_ru">Жесткие диски в наличии</string>
    <string name="nissan_skyline_r34">Toshiba MG10SFA22TE</string>
    <string name="show_info_ru">Показать информацию</string>
    <string name="_2002">2002</string>
    <string name="gray_ru">Серый</string>
    <string name="_122_111">122111 $</string>
    <string name="book_auto_ru">Купить жесткий диск</string>
    <string name="redemption_price_ru">Цена выкупа:</string>
    <string name="your_bet_ru">Ваша ставка:</string>
    <string name="dollar_sign">$</string>
    <string name="audi_rs6_c8">Audi RS6 (C8)</string>
    <string name="_2021">2021</string>
    <string name="blue_ru">Синий</string>
    <string name="_250000">250000 $</string>
    <string name="bet_ru">ставка</string>
    <string name="make_bet_ru">Сделать ставку</string>
    <string name="Year_of_issue_ru">Год выпуска</string>
    <string name="mileage_ru">Семейство</string>
    <string name="engine_ru">Шина</string>
    <string name="body_ru">Технология записи</string>
    <string name="color_ru">Цвет жесткого диска</string>
    <string name="drive_unit_ru">Расположение</string>
    <string name="transmission_ru">Назначение</string>
    <string name="steering_wheel_ru">Объем накопителя</string>
    <string name="_42000km">42000 км</string>
    <string name="_2_5_280">2.5 л / 280 л.с. / Бензин</string>
    <string name="coupe_ru">Купе</string>
    <string name="awd_ru">Полный</string>
    <string name="automatic_ru">Автоматическая</string>
    <string name="right_ru">Правый</string>
    <string name="station_wagon_ru">Универсал</string>
    <string name="_4_0_600">4.0 л / 600 л.с. / Бензин</string>
    <string name="_20_km">20 км</string>
    <string name="back_ru">Назад</string>
    <string name="about_ru">О приложении</string>
    <string name="send_review">Оставить отзыв</string>
    <string name="send_review_ru">Оставить отзыв</string>
    <string name="send_ru">Отправить</string>
    <string name="review_ru">Отзыв</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="car_name_ru">Название</string>
    <string name="car_brand_logo">Car brandListItem logo</string>
    <string name="listview">ListView</string>
    <string name="recycleview">RecycleView</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="all_brands_list_ru">Список всех жестких дисков</string>
    <string name="book_car_ru">Купить жесткий диск</string>
    <string name="price_ru">Цена</string>
    <string name="mazda_rx_8">Mazda RX-8</string>
    <string name="rwd_ru">Задний</string>
    <string name="manual_ru">Механическая</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="condition_ru">Состояние</string>
    <string name="about_app_ru">О приложениии</string>
    <string name="about_text">""HardDisk ShowRoom" - это интуитивно понятное и мощное Android-приложение, разработанное для тех, кто ищет лучшие предложения по жестким дискам.\n\nС "HardDisk ShowRoom" вы можете легко и удобно просматривать широкий ассортимент жестких дисков от ведущих производителей.\n\nВас ждут подробные описания каждой модели, высококачественные фотографии, технические характеристики и информация о ценах.Независимо от того, ищете ли вы высокопроизводительное хранилище данных для рабочего компьютера, или пытаетесь определиться с идеальным вариантом для домашнего сервера, приложение "HardDisk ShowRoom" является вашим надежным партнером в выборе лучшего жесткого диска.\n\nС приложением "HardDisk ShowRoom" вы сможете делать осознанный выбор, подкрепленный подробной информацией и экспертными советами, и обеспечить себе надежное хранилище для ваших данных. Вам доступны подробные описания каждой модели, фотографии, технические характеристики, а также информация о доступных вариантах комплектации и ценах.\n\nПокупайте с уверенностью и удовлетворяйте свои потребности в хранении данных с "HardDisk ShowRoom".
</string>
    <string name="sign_in_ru">Войти</string>
    <string name="sign_up_ru">Зарегистрироваться</string>
    <string name="exit">Выйти</string>
    <string name="registration_ru">Регистрация</string>
    <string name="login_ru">Вход в аккаунт</string>
    <string name="user_name_ru">Имя пользователя</string>
    <string name="email">Email</string>
    <string name="phone_number_ru">Номер телефона</string>
    <string name="favorites">Favorites</string>
    <string name="profile_ru">Профиль</string>
    <string name="favorites_ru">Избранное</string>
    <string name="add_to_favorites_ru">Добавить в избранное</string>
    <string name="users_ru">Пользователи</string>
</resources>