<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray">

    <TextView
        android:id="@+id/cars_in_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/send_review_ru"
        android:textColor="@color/black"
        android:textSize="@dimen/in_dp"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="175dp"
        android:layout_height="200dp"
        android:layout_below="@id/cars_in_stock"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/review_et"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/logo_image"
        android:gravity="top"
        android:hint="@string/review_ru"
        android:maxLength="320"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/sendReview_button"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@id/review_et"
        android:backgroundTint="@color/green"
        android:onClick="sendReview"
        android:text="@string/send_ru"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@id/sendReview_button"
        android:onClick="backToMain"
        android:text="@string/back_ru"
        tools:ignore="UsingOnClickInXml" />


</RelativeLayout>