<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ide"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/back_ru" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ide"
        android:orientation="vertical">

        <TextView
            android:id="@+id/make_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:text="Отзыв о приложении"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:ignore="HardcodedText,SpUsage" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ide"
        android:orientation="vertical">

        <EditText
            android:id="@+id/review_et"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/review_ru"
            android:maxLength="320"
            android:textColor="@color/white"
            tools:ignore="Autofill,InefficientWeight,TextFields" />

        <Button
            android:id="@+id/send_review_button"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:backgroundTint="@color/green"
            android:text="@string/send_ru"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

</LinearLayout>

